<resources>
    <string name="app_name">ScoreTally</string>
    <string name="app_name_enterdata">Enter scores</string>
    <string name="app_name_settings">ST  Settings</string>
    <string name="app_name_summary">ST  Summary</string>
    <string name="app_name_login">ST  Login</string>
    <string name="action_settings">Settings</string>
    <string name="action_tournaMode">Tournament Mode</string>
    <string name="action_tournaMode_disable">Disable Tournament Mode</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_club">Club</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Club or Password or role is incorrect</string>
    <string name="radio_singles">singles</string>
    <string name="radio_doubles">doubles</string>
    <string name="radio_gold">gold</string>
    <string name="radio_silver">silver</string>
    <string name="action_enter">Enter</string>
    <string name="action_summary">Summary of this round</string>
    <string name="check_new_round">Start a new round of games</string>
    <string name="st_image_desc">Score tally image</string>
    <string name="superuser">super-user</string>
    <string name="admin">admin</string>
    <string name="member">member</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="demo_scroll">This is \'demo\' mode with \'member\' role access. To exit, go to settings and click \'Logout\'</string>
    <string name="demo1_link"><![CDATA[<a href="https://www.youtube.com/watch?v=ePddeJr9x-U">demo video1</a>]]></string>
</resources>
