<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_nonbirdie_portrait">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:text="@string/app_name_login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/prompt_user"
                android:textSize="12sp"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/passwd_view_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <EditText
                        android:id="@+id/clubname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:hint="@string/prompt_club"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundedrect"
                android:text="@string/action_sign_in"
                android:textColor="#fff"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:indeterminate="true"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/options_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/gametype_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="50"
                    android:paddingTop="30dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_singles"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/gametype_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_doubles"
                        android:checked="true"
                        android:textSize="20sp" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/gamegroup_radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="50"
                    android:paddingTop="30dp">

                    <RadioButton
                        android:id="@+id/gamegroup_gold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_gold"
                        android:textSize="20sp"
                        android:textColor="@color/colorGold"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/gamegroup_silver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radio_silver"
                        android:textSize="20sp"
                        android:textColor="@color/colorSilver"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/next_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundedrect"
                android:text="Next"
                android:textColor="#fff"
                android:textStyle="bold" />

                <Button
                    android:id="@+id/new_round_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/roundedrect"
                    android:text="create new round"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            <TextView
                android:id="@+id/current_round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current round : "
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/time_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time now : "
                android:layout_marginStart="16dp"
                android:textColor="@android:color/black"
                android:textSize="11sp" />






        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:contentDescription="@string/st_image_desc"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/birdie02" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/return_arrow" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>