<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@color/colorPrimary"
    tools:context=".EnterData">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="15sp"
        android:padding="5dp"
        android:text="@string/app_name_enterdata" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">
            <!-- Extra Relative layout is used to just give the white background, with black arrow -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorWhite">
            <Spinner
                android:id="@+id/spinner_p1"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorWhite">
            <Spinner
                android:id="@+id/spinner_p2"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>
        <!-- Extra Relative layout is used to just give the white background, with black arrow -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="60"
            android:layout_gravity="center_vertical"
            android:background="@color/colorWhite">
        <Spinner
            android:id="@+id/score_t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="vs" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorWhite">
            <Spinner
                android:id="@+id/spinner_p3"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorWhite">
            <Spinner
                android:id="@+id/spinner_p4"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="60"
            android:layout_gravity="center_vertical"
            android:background="@color/colorWhite">
        <Spinner
            android:id="@+id/score_t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/enter_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/action_enter"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancel_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_cancel"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/summary_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/action_summary"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/birdie" />

</LinearLayout>